# ai-bms-pipeline

./: .gitignore  Makefile  README.md  agents.md  experiments.ipynb  main.py  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/hooks/: run-tests-on-stop.sh
.claude/skills/pr-check/: SKILL.md
.cursor/agents/: debugger.md  test-runner.md  verifier.md
.cursor/rules/: python-best-practices.mdc  uv-python.mdc
conf/: analysis-output.schema.yaml  bms-snapshot.schema.yaml  yaml_notes.md
github/: PULL_REQUEST_TEMPLATE.md
github/workflows/: black.yml  package_testing.yml
references/: acronyms.md  analysis_domains.md  design_notes.md
scripts/: analyze_buildings.py  images_to_structured_data.py  pdf_to_markdown.py  pipeline_example.py
src/ai_bms_pipeline/: __init__.py  analysis.py  config.py  image_ingest.py  logs.py  utils.py
src/gridium_bms_ai_pipeline/: __init__.py
tests/: test_analysis.py  test_image_ingest.py  test_images_to_structured_data.py  test_imports.py  test_schema_validation.py  test_utils.py
