[project]
name = "gridium-bms-ai-pipeline"
version = "0.1.0"
description = "Pipeline for using AI tools to process data from Building Management Systems (BMS) in order to derive energy efficiency insights quickly."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pandas>=3.0.1",
]
