[project]
name = "ai-bms-pipeline"
version = "0.1.0"
description = "Pipeline for using AI tools to process data from Building Management Systems (BMS) in order to derive energy efficiency insights quickly."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pandas>=3.0.1",
    "pymupdf4llm>=0.0.20",
]

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-xdist>=3.6.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-n auto"